--- a/CSS/global.css
+++ b/CSS/global.css
@@ -1,11 +1,27 @@
 .btn-sizer{
-	width: 80% !important;
-	margin-right: 10% !important;
-	margin-left: 10% !important;
+	width: 60% !important;
+	margin-right: 20% !important;
+	margin-left: 20% !important;
+	height: 10vw !important;
+	vertical-align: middle !important;
+	font-size: 5vw !important;
+
 }
 
 .btn-sizer-row{
 	width: 40% !important;
 	margin-right: 4% !important;
 	margin-left: 4% !important;
+	height: 10vw !important;
+	vertical-align: middle !important;
+	font-size: 5vw !important;
 }
+
+html {
+	background-color: #FAF5E6 !important;
+	height: 100vh !important;
+}
+ 
+ .container-fluid{
+ 	background-color: #FAF5E6;
+ }
