--- a/CSS/fit.css
+++ b/CSS/fit.css
@@ -2,15 +2,23 @@
 	font-family: 'Fredoka One', cursive;
 	color: #7D1935;
 	text-align: center;
-	font-size: 15vh;
+	font-size: 20vw;
 	margin-bottom: 10%;
-
 }
 
 *{
-	font-family:  Verdana, Geneva, sans-serif;
+	font-family: Arial, Helvetica, sans-serif;
 }
 
 .userEdit{
 	display: none;
+}
+
+.userSettings {
+	font-size: 5vw;
+	text-align: left;
+	padding-left: 25vw;
+	border: solid;
+	margin-bottom: 10%;
+	background-color: white;
 }
